--- a/OOP/OOP/OOP.csproj
+++ b/OOP/OOP/OOP.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mitarbeiter.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Taschenrechner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
