--- a/Polymorphie/Polymorphie/Polymorphie.csproj
+++ b/Polymorphie/Polymorphie/Polymorphie.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Grafik.cs" />
     <Compile Include="Kreis.cs" />
+    <Compile Include="Lottozahlengenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rechteck.cs" />
