--- a/KomplexeDatentypen/KomplexeDatentypen/KomplexeDatentypen.csproj
+++ b/KomplexeDatentypen/KomplexeDatentypen/KomplexeDatentypen.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bruch.cs" />
+    <Compile Include="Erweiterungsmethoden.cs" />
+    <Compile Include="GanzerSatz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
